cpp-init v0.4 changelog:
* Fixed a bug where `enable_autoformatter` was installing .clang-tidy instead of .clang-format
* Fixed a bug where `make_executable` failed with "source file not found" by not adding header files to target

cpp-init v0.3 changelog:
* Split fetch_prebuilt_dependency into two functions
    * fetch_prebuilt_dependency for archives
    * fetch_headeronly_dependency for non-archives
    * Both now have URL as a named parameter
    * Both now have CACHE_DIR as a named parameter for downloading the dependencies outside of project dir
* Updated documentation
* User can set CPP_INIT_ROOT_DIR to which all scripts will be downloaded
* Added macros.cmake with following two macros
    * make_static_library
    * make_executable
    * These are shorthands for other functions that I often use together

cpp-init v0.2 changelog:
* Added enable_autoformatter which autocopies and link .clang-format
	* Removed bootstrap_clang_format
* Added enable_linter which autocopies and enables .clang-format
	* But don't use it, C++23 is not compatible with what MSVC ships
* fetch_prebuilt_dependency now uses FetchContent_MakeAvailable which replaces FetchContent_Populate

cpp-init v0.1 changelog:
* Initial version