@@ -1,3 +1,6 @@
+cpp-init v0.5 changelog:
+* `source` folder is allowed instead of `src`
+
 cpp-init v0.4 changelog:
 * Fixed a bug where `enable_autoformatter` was installing .clang-tidy instead of .clang-format
 * Fixed a bug where `make_executable` failed with "source file not found" by not adding header files to target
